# epubrepairtool

./: .gitignore  README.md  pyproject.toml  report1.txt  start_gui.bat  start_gui.py  start_gui.sh
docs/: QUICKSTART.md  architecture.md  design.md  prompt.md
src/epub_repair/: __init__.py  cli.py  css_processor.py  epub_io.py  gui.py  models.py  reporting.py  xhtml_parser.py
src/epub_repair/rules/: __init__.py  breaks.py  css_cleanup.py  headings.py  images.py  lists.py  paragraphs.py
src/epub_upgrade/: README.md  __init__.py  cli.py  epub_io.py  nav_conversion.py  reporting.py  upgrade.py  versioning.py
test_data/: create_test_epub.py  create_test_epub_with_pagebreaks.py
tests/: __init__.py  test_models.py
