[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub-repair"
version = "0.1.0"
description = "Formatting repair engine for reflowable EPUB files"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "EPUB Repair Contributors"}
]
keywords = ["epub", "ebook", "formatting", "repair", "accessibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "lxml>=4.9.0",
    "tinycss2>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
epub-format-fix = "epub_repair.cli:main"
epub-repair-gui = "epub_repair.gui:main"
epub-upgrade = "epub_upgrade.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["epub_repair", "epub_upgrade"]

[tool.setuptools.package-data]
epub_repair = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
